kubernetes-deployment/service.yml
# auth service

apiVersion: v1
kind: Service
metadata:
  name: authentication-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: authentication
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
---
# orders service

apiVersion: v1
kind: Service
metadata:
  name: orders-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8001"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: LoadBalancer
---
# products service

apiVersion: v1
kind: Service
metadata:
  name: products-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8002"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: products
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: LoadBalancer
---
# tenant service

apiVersion: v1
kind: Service
metadata:
  name: tenant-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8003"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: tenant
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
  type: LoadBalancer
---
# wishlist service

apiVersion: v1
kind: Service
metadata:
  name: wishlist-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8004"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: wishlist
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
  type: LoadBalancer
---
