kubernetes-deployment/test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phasenet-api
  labels:
    app: phasenet
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: phasenet
  template:
    metadata:
      labels:
        app: phasenet
    spec:
      containers:
        - name: phasenet
          image: zhuwq0/phasenet-api:1.0
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "600m"
              # memory: "5G"
            limits:
              memory: "3G"
          startupProbe:
            # httpGet:
            #   path: /healthz
            #   port: 8000
            exec:
              command:
                - "curl"
                - "--fail"
                - "-o"
                - "/dev/null"
                - "http://localhost:8000/healthz"
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            # httpGet:
            #   path: /healthz
            #   port: 8000
            exec:
              command:
                - "curl"
                - "--fail"
                - "-o"
                - "/dev/null"
                - "http://localhost:8000/healthz"
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
          livenessProbe:
            # httpGet:
            #   path: /healthz
            #   port: 8000
            exec:
              command:
                - "curl"
                - "--fail"
                - "-o"
                - "/dev/null"
                - "http://localhost:8000/healthz"
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: phasenet-api
  annotations:
    cloud.google.com/backend-config: '{"default": "backendconfig"}'
spec:
  selector:
    app: phasenet
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
  # type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamma-api
  labels:
    app: gamma
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: gamma
  template:
    metadata:
      labels:
        app: gamma
    spec:
      containers:
        - name: gamma
          image: zhuwq0/gamma-api:1.0
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
            # limits:
            #   memory: "5G"
          startupProbe:
            # httpGet:
            #   path: /healthz
            #   port: 8001
            exec:
              command:
                - "curl"
                - "--fail"
                - "-o"
                - "/dev/null"
                - "http://localhost:8001/healthz"
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            # httpGet:
            #   path: /healthz
            #   port: 8001
            exec:
              command:
                - "curl"
                - "--fail"
                - "-o"
                - "/dev/null"
                - "http://localhost:8001/healthz"
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
          livenessProbe:
            # httpGet:
            #   path: /healthz
            #   port: 8001
            exec:
              command:
                - "curl"
                - "--fail"
                - "-o"
                - "/dev/null"
                - "http://localhost:8001/healthz"
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gamma-api
  annotations:
    cloud.google.com/backend-config: '{"default": "backendconfig"}'
spec:
  selector:
    app: gamma
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8000
  type: LoadBalancer
  # type: NodePort
---
